--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -10,7 +10,7 @@
           <li class="nav-item">
             <a class="nav-link" href="/">Home</a>
           </li>
-          <li class="nav-item">
+          <!-- <li class="nav-item">
             <a class="nav-link" href="/about">About</a>
           </li>
           <li class="nav-item">
@@ -18,7 +18,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/contact">Contact</a>
-          </li>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="/post/new">New Post</a>
           </li>
