--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -22,6 +22,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/post/new">New Post</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/auth/register">New User</a>
+          </li>
         </ul>
       </div>
     </div>
