--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -23,6 +23,9 @@
             <a class="nav-link" href="/post/new">New Post</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="/auth/login">Login</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="/auth/register">New User</a>
           </li>
         </ul>
